[metadata]
name = sunshinesocks
version = attr: sunshinesocks.__version__
author = Tang Ziya
author-email = tcztzy@gmail.com
description = A fast and modern tunnel proxy that help you.
long_description = file: README.rst
long_description_content_type = text/x-rst; charset=UTF-8
url = https://sunshinesocks.github.io
project_urls =
    Bug Tracker = https://github.com/sunshinesocks/sunshinesocks/issues
    Documentation = https://sunshinesocks.github.io/sunshinesocks
    Source Code = https://github.com/sunshinesocks/sunshinesocks
license = GPLv3+
classifiers =
    Development Status :: 2 - Pre-Alpha
    Environment :: Console
    Framework :: AsyncIO
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3 :: Only
    Topic :: Internet :: Proxy Servers
    Topic :: System :: Networking :: Firewalls
keywords =
    socks
    proxy

[options]
python_requires = >=3.7
install_requires =
    uvloop>=0.13.0rc1; sys_platform!='win32' or sys_platform!='cygwin' or sys_platform!='cli'

[yapf]
based_on_style = pep8
